--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
 
   python:
     build:
-      context: .
+      context: ./src
       dockerfile: Dockerfile
     env_file:
       - .env
@@ -21,6 +21,8 @@ services:
       - db
     ports:
       - 8000:8000
+    stdin_open: true
+
 
 volumes:
   postgres-data:
