rename container and add volume to python container

--- a/.env-example
+++ b/.env-example
@@ -1,3 +1,6 @@
 MISTRAL_API_KEY=your_api_key_here
-DB_CONNECTION_STRING=postgresql://user:password@localhost:5432/amygdala
+POSTGRES_DB=mydb
+POSTGRES_USER=myuser
+POSTGRES_PASSWORD=mypassword
+DB_CONNECTION_STRING=postgresql://myuser:mypassword@localhost:5432/mydb
 CONTEXT_WINDOW_SIZE=2048  # Adjust based on your needs
