--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3'
 services:
 
   db:
+    container_name: db
     image: postgres:13
     env_file:
       - .env
@@ -12,6 +13,7 @@ services:
       - 1234:5432
 
   python:
+    container_name: python
     build:
       context: ./src
       dockerfile: Dockerfile
@@ -22,6 +24,8 @@ services:
     ports:
       - 8000:8000
     stdin_open: true
+    volumes:
+      - ./src:/app
 
 
 volumes:
