db connection works

--- a/.env-example
+++ b/.env-example
@@ -1,6 +1,10 @@
 MISTRAL_API_KEY=your_api_key_here
+
+## Database Info
+POSTGRES_HOST=db
 POSTGRES_DB=mydb
 POSTGRES_USER=myuser
 POSTGRES_PASSWORD=mypassword
-DB_CONNECTION_STRING=postgresql://myuser:mypassword@localhost:5432/mydb
-CONTEXT_WINDOW_SIZE=2048  # Adjust based on your needs
+
+## LLM config
+CONTEXT_WINDOW_SIZE=2048
