--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -18,7 +18,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pylint
-        pip install --no-cache-dir -r requirements.txt
+        pip install --no-cache-dir -r src/requirements.txt
     - name: Analysing the code with pylint
       run: |
         pylint $(git ls-files '*.py')
